--- a/test-gckanbun.tex
+++ b/test-gckanbun.tex
@@ -1,7 +1,7 @@
 %% https://gist.github.com/munepi/5c9e53936e3540b8374b4ab14e6b7832
 %#!lualatex
 % #!ptex2pdf -l -u
-\documentclass[paper=a5,tate]{jlreq}
+\documentclass[paper=a5,tate]{jlreq}\listfiles
 %\usepackage{gckanbun}%%=> provides \gckanbunruby, \gckanbunokurigana, \gckanbunkaeriten as default
 \usepackage[prefix=]{gckanbun}%%=> provides \ruby, \okurigana, \kaeriten
 %\usepackage[prefix=kanbun]{gckanbun}%%=> provides \kanbunruby, \kanbunokurigana, \kanbunkaeriten
